# bitbots_template_repository

.github/workflows/: pre-commit.yml
bitbots_template_cpp/: CMakeLists.txt  package.xml
bitbots_template_cpp/config/: bitbots_template_cpp_parameters.yaml
bitbots_template_cpp/include/bitbots_template_cpp/: template.hpp
bitbots_template_cpp/launch/: template.launch
bitbots_template_cpp/src/: template.cpp
bitbots_template_py/: package.xml  setup.cfg  setup.py
bitbots_template_py/bitbots_template_py/: template.py
bitbots_template_py/config/: bitbots_template_py_parameters.yaml
bitbots_template_py/launch/: template.launch
