<?xml version="1.0" encoding="utf-8" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bitbots_template_cpp</name>
  <description>Template cpp node</description>
  <version>0.0.0</version>
  <license>MIT</license>

  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>backward_ros</depend>
  <depend>bitbots_docs</depend>
  <depend>generate_parameter_library</depend>
  <depend>rclcpp</depend>


  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>c++</language>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
